@@ -1,3 +1,12 @@
+2011-05-24  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: Reorganize InspectorBackendDispatch code to eliminate duplication
+        https://bugs.webkit.org/show_bug.cgi?id=61300
+
+        * inspector/CodeGeneratorInspector.pm:
+
 2011-05-23  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Adam Barth.
